--- a/localisation/english/events_l_english.yml
+++ b/localisation/english/events_l_english.yml
@@ -633,45 +633,45 @@
  soviet.76.d: "For some reason, our offer to return territory was declined by the [FROM.GetAdjective] government. What they are up to is hard to tell at this point, but at least it means they will find it harder to press claims on the territory later."
  soviet.76.a: "There's no pleasing somebody"
 
- finland.1.t:2 "The [FROM.GetAdjective]s Demand [146.GetName]"
- finland.1.d:1 "Citing the need to create a security buffer for [195.GetName], officials from [FROM.GetNameDef] have asked for a revision of our borders. They want us to cede Karelia to them, and judging by the build-up of [FROM.GetAdjective] forces along our border, they will not take no for an answer. How should we respond?"
- finland.1.a:0 "We have no choice but to accept their demands."
- finland.1.b:0 "Let them come if they dare!"
+ jat.23.t:2 "The [FROM.GetAdjective]s Demand [146.GetName]"
+ jat.23.d:1 "Citing the need to create a security buffer for [195.GetName], officials from [FROM.GetNameDef] have asked for a revision of our borders. They want us to cede Karelia to them, and judging by the build-up of [FROM.GetAdjective] forces along our border, they will not take no for an answer. How should we respond?"
+ jat.23.a:0 "We have no choice but to accept their demands."
+ jat.23.b:0 "Let them come if they dare!"
  FIN_remove_soviet_claims_in_other_states_tt: "Renounce to all claims in [FIN.GetFlag]§Y[FIN.GetAdjective]§! core states."
- finland.2.t:0 "Request Viggen Assistance in War"
- finland.2.d:0 "Jatkosota and Pravda are at war. After only a few decades of sovereignty, we now risk once again becoming the subject of one of our neighbors.\n\nThe threat of our enemy extends beyond our borders, however. Our neighbors in Sweden are still retaining a neutral stance towards the Soviet Union, but could perhaps be convinced to join us in defending our mutual legacy and secure their own strategic buffer."
- finland.2.a:0 "They should contribute to the stand we've taken."
- finland.2.b:0 "We have no need for the help of old oppressors."
- finland.3.t:0 "Jatkosota Seeks Viggen Support"
- finland.3.d:0 "Our neighbor Jatkosota has refused to give in to pressures from Pravda, and the nations are now in a state of war. Although no formal alliance has been agreed upon between our countries, the Finnish government has requested that Sweden contribute to a joint defense of Åland, which remains largely Swedish-speaking and strategically important to both countries.\n\nWhile the government remains divided on what steps we should take to help Finland, the public support for their defense is notable. How far are we willing to go to protect our fellow Nordic counties from eastern aggression?"
- finland.3.a:0 "We must retain our neutrality."
- finland.3.b:0 "If public support is what they have, send volunteers and equipment."
- finland.3.c:0 "Jatkosta's cause is ours! To war!"
- finland.4.t:0 "Viggen Rejects Request"
- finland.4.d:0 "The Viggen government has responded negatively to our request for aid in the war against Pravda. Preferring to remain neutral to avoid international and internal repercussions, they are so far opposed to contributing to the war in any way."
- finland.4.a:0 "Let's hope they realize their mistake before it's too late."
- finland.5.t:0 "Viggen Sends Volunteers"
- finland.5.d:0 "The Viggen government has been unwilling to join us in the war against the Pravda, but public support among our neighbors is still high, and many volunteers from the other Nordic countries have offered to join our ranks to aid the war effort. Although less than we hoped, at least there is some popular awareness about the threat we are facing."
- finland.5.a:0 "It's the least one would expect."
- finland.6.t:0 "Viggen Joins Our War"
- finland.6.d:0 "Our request to the Viggen government for a joint defense of Åland has been met above expectations. Sweden has joined us in war against Pravda, refusing to remain neutral in the face of such a blatant threat. Despite internal disagreements, they will now fight with us side by side to secure continued Finnish sovereignty."
- finland.6.a:0 "This day will be remembered."
- finland.7.t:0 "Peace Negotiations With [SOV.GetNameDef]"
- finland.7.d:0 "[Root.GetAdjective] communist Hella Wuolijoki has contacted our government and offered her help in establishing contact with the [SOV.GetAdjective] regime. A meeting has been set up in a secret location in Sweden, where we will be offered the opportunity to cede territory in return for continued [Root.GetAdjective] sovereignty. \n\nThe Finnish forces are rapidly depleting, and previous attempts to open a line of communication has been unsuccessful. This may be our only hope for a peaceful resolution to the conflict."
- finland.7.a_tt:0 "§YIf [SOV.GetName] accepts:\n§!"
- finland.7.a:0 "There is no winning this war"
- finland.7.b:0 "We must keep fighting!"
- finland.8.t:0 "[From.GetNameDefCap] Offers Concessions"
- finland.8.d:0 "The war with [From.GetNameDef] has been a costly affair, but as we have been able to push back the [From.GetAdjective] army, they have presented us with a compelling offer. We are given control of strategically important areas, but need to withdraw our troops and cease further hostilities.\nThis will end our offensive on [From.GetNameDef] without full control over the region, but will in turn allow us to focus on extending our sphere of influence in other parts of the world."
- finland.8.a:0 "Our soldiers are needed elsewhere"
- finland.8.b:0 "We need all of [From.GetNameDef]"
- finland.9.t:0 "[From.GetNameDefCap] Refuses"
- finland.9.d:0 "The negotiations initiated with [From.GetNameDef] has broken down. It was obviously a ruse to waste our time while the [From.GetAdjective] army positioned for yet another assault on [Root.GetAdjective] territory.\n\n[Root.GetNameDef] will stand tall and fight till the bitter end."
- finland.9.a:0 "They shall bleed for every step!"
+ jat.24.t:0 "Request Viggen Assistance in War"
+ jat.24.d:0 "Jatkosota and Pravda are at war. After only a few decades of sovereignty, we now risk once again becoming the subject of one of our neighbors.\n\nThe threat of our enemy extends beyond our borders, however. Our neighbors in Sweden are still retaining a neutral stance towards the Soviet Union, but could perhaps be convinced to join us in defending our mutual legacy and secure their own strategic buffer."
+ jat.24.a:0 "They should contribute to the stand we've taken."
+ jat.24.b:0 "We have no need for the help of old oppressors."
+ jat.25.t:0 "Jatkosota Seeks Viggen Support"
+ jat.25.d:0 "Our neighbor Jatkosota has refused to give in to pressures from Pravda, and the nations are now in a state of war. Although no formal alliance has been agreed upon between our countries, the Finnish government has requested that Sweden contribute to a joint defense of Åland, which remains largely Swedish-speaking and strategically important to both countries.\n\nWhile the government remains divided on what steps we should take to help Finland, the public support for their defense is notable. How far are we willing to go to protect our fellow Nordic counties from eastern aggression?"
+ jat.25.a:0 "We must retain our neutrality."
+ jat.25.b:0 "If public support is what they have, send volunteers and equipment."
+ jat.25.c:0 "Jatkosta's cause is ours! To war!"
+ jat.26.t:0 "Viggen Rejects Request"
+ jat.26.d:0 "The Viggen government has responded negatively to our request for aid in the war against Pravda. Preferring to remain neutral to avoid international and internal repercussions, they are so far opposed to contributing to the war in any way."
+ jat.26.a:0 "Let's hope they realize their mistake before it's too late."
+ jat.27.t:0 "Viggen Sends Volunteers"
+ jat.27.d:0 "The Viggen government has been unwilling to join us in the war against the Pravda, but public support among our neighbors is still high, and many volunteers from the other Nordic countries have offered to join our ranks to aid the war effort. Although less than we hoped, at least there is some popular awareness about the threat we are facing."
+ jat.27.a:0 "It's the least one would expect."
+ jat.28.t:0 "Viggen Joins Our War"
+ jat.28.d:0 "Our request to the Viggen government for a joint defense of Åland has been met above expectations. Sweden has joined us in war against Pravda, refusing to remain neutral in the face of such a blatant threat. Despite internal disagreements, they will now fight with us side by side to secure continued Finnish sovereignty."
+ jat.28.a:0 "This day will be remembered."
+ jat.29.t:0 "Peace Negotiations With [SOV.GetNameDef]"
+ jat.29.d:0 "[Root.GetAdjective] communist Hella Wuolijoki has contacted our government and offered her help in establishing contact with the [SOV.GetAdjective] regime. A meeting has been set up in a secret location in Sweden, where we will be offered the opportunity to cede territory in return for continued [Root.GetAdjective] sovereignty. \n\nThe Finnish forces are rapidly depleting, and previous attempts to open a line of communication has been unsuccessful. This may be our only hope for a peaceful resolution to the conflict."
+ jat.29.a_tt:0 "§YIf [SOV.GetName] accepts:\n§!"
+ jat.29.a:0 "There is no winning this war"
+ jat.29.b:0 "We must keep fighting!"
+ jat.30.t:0 "[From.GetNameDefCap] Offers Concessions"
+ jat.30.d:0 "The war with [From.GetNameDef] has been a costly affair, but as we have been able to push back the [From.GetAdjective] army, they have presented us with a compelling offer. We are given control of strategically important areas, but need to withdraw our troops and cease further hostilities.\nThis will end our offensive on [From.GetNameDef] without full control over the region, but will in turn allow us to focus on extending our sphere of influence in other parts of the world."
+ jat.30.a:0 "Our soldiers are needed elsewhere"
+ jat.30.b:0 "We need all of [From.GetNameDef]"
+ jat.31.t:0 "[From.GetNameDefCap] Refuses"
+ jat.31.d:0 "The negotiations initiated with [From.GetNameDef] has broken down. It was obviously a ruse to waste our time while the [From.GetAdjective] army positioned for yet another assault on [Root.GetAdjective] territory.\n\n[Root.GetNameDef] will stand tall and fight till the bitter end."
+ jat.31.a:0 "They shall bleed for every step!"
  FIN_agree_peace:0 "Jakosota agrees to Pravdan demands and cedes §YKarjala, Salla and Petsamo§!."
-  finland.10.t:0 "The Winter War"
- finland.10.d:0 "Finally, the territorial ambitions of [SOV.GetNameDef] have culminated in the invasion of our country by this most vile enemy. We must take all measures in our power to form a solid defense against this ruthless attack. Let them pay for every step forward in our land!"
- finland.10.a:0 "Cut them to Pieces!"
+ jat.32.t:0 "The Winter War"
+ jat.32.d:0 "Finally, the territorial ambitions of [SOV.GetNameDef] have culminated in the invasion of our country by this most vile enemy. We must take all measures in our power to form a solid defense against this ruthless attack. Let them pay for every step forward in our land!"
+ jat.32.a:0 "Cut them to Pieces!"
  japan.1.d:0 "Zhongguo authorities claim that the 'breaking point' has been reached in regards to our 'unwarranted aggressions' towards Zhongguo! Our demands for reparations have been refused, and there are reports of Chi-Ha-Tan nationals coming under attack in Shanghai. If we needed an excuse to deal decisively with the Zhongguo, this is it!"
  japan.1.a:0 "They will pay for this!"
  japan.2.d:0 "Surprisingly, the Zhongguo have chosen to back down following the skirmish at the Marco Polo Bridge. They understand that angering us carries a steep price, and have agreed to extensive territorial concessions that include Beijing and its surrounding regions. Little by little, Zhongguo is becoming ours."
