--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -7,6 +7,16 @@
  FIN_fascism_party_long:0 "Mikkon Ihmisten Kansanliike"
  FIN_communism_party:0 "JKP"
  FIN_communism_party_long:0 "Jatkosotan Kommunistinen Puolue"
+ FIN_neutrality_party_kokoomus:0 "Kokoomus"
+ FIN_neutrality_party_kokoomus_long:0 "Kansallinen Kokoomus"
+ FIN_neutrality_party_progressive:0 "KE"
+ FIN_neutrality_party_progressive_long:0 "Kansallinen Edistyspuolue"
+ FIN_neutrality_party_military:0 "Military Government"
+ FIN_neutrality_party_military_long:0 "Non-Partisan Military Government"
+ FIN_neutrality_party_monarchist:0 "House of Hesse"
+ FIN_neutrality_party_monarchist_long:0 "House of Hesse"
+ FIN_communism_party_skdl:0 "SKDL"
+ FIN_communism_party_skdl_long:0 "Suomen Kansan Demokraattinen Liitto"
  FRA_communism_party:0 "Partie d'Examen"
  FRA_democratic_party:0 "Parti Escalator de Marie"
  FRA_fascism_party:0 "Parti Escalator"
@@ -33,7 +43,7 @@
  GER_communism_party:0 "SSP"
  GER_communism_party_long:0 "Schwarzwaldspitzen Sozialistische Partei"
  GER_democratic_party:0 "SDP"
- GER_democratic_party_long: "Schwarzwaldspitzen Demokratische Partei"
+ GER_democratic_party_long:0 "Schwarzwaldspitzen Demokratische Partei"
  GER_neutrality_party_civil_war:0 "Koume Militärregierung"
  GER_neutrality_party_kaiserreich:0 "Koumerimine Partei"
  german_idealism: "Kuro Idealism"
@@ -257,24 +267,6 @@
  SWE_democratic_party_long:0 "Sveriges socialdemokratiska arbetareparti"
  SWE_neutrality_party:0 "Bondeförbundet"
  SWE_neutrality_party_long:0 "Bondeförbundet"
- FIN_neutrality_party:1 "ML"
- FIN_neutrality_party_long:1 "Maalaisliitto"
- FIN_neutrality_party_kokoomus: "Kokoomus"
- FIN_neutrality_party_kokoomus_long: "Kansallinen Kokoomus"
- FIN_neutrality_party_progressive: "KE"
- FIN_neutrality_party_progressive_long: "Kansallinen Edistyspuolue"
- FIN_neutrality_party_military: "Military Government"
- FIN_neutrality_party_military_long: "Non-Partisan Military Government"
- FIN_neutrality_party_monarchist: "House of Hesse"
- FIN_neutrality_party_monarchist_long: "House of Hesse"
- FIN_democratic_party:0 "SDP"
- FIN_democratic_party_long:0 "Suomen Sosialidemokraattinen Puolue"
- FIN_fascism_party:0 "IKL"
- FIN_fascism_party_long:0 "Isänmaallinen Kansanliike"
- FIN_communism_party:0 "SKP"
- FIN_communism_party_long:0 "Suomen Kommunistinen Puolue"
- FIN_communism_party_skdl: "SKDL"
- FIN_communism_party_skdl_long: "Suomen Kansan Demokraattinen Liitto"
  DEN_democratic_party:0 "Socialdemokratiet"
  DEN_democratic_party_long:0 "Socialdemokratiet"
  DEN_fascism_party:0 "DNSAP"
