alright where the hell are the rest
missing luxembourg and aussa

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -454,20 +454,20 @@
  NOR_subject_DEF:0 "$OVERLORDADJ$ $NOR$"
  DEN_fascism:0 "North Sea Empire"
  DEN_fascism_DEF:0 "the North Sea Empire"
- DEN_democratic:0 "Danmark"
- DEN_democratic_DEF:0 "Danmark"
- DEN_neutrality:0 "Kingdom of Danmark"
- DEN_neutrality_DEF:0 "the Kingdom of Danmark" #honk I will find you in your sleep if you change denmarks name to danmork again
- DEN_communism:0 "Danmark Civil Union"
- DEN_communism_DEF:0 "the Danmark Civil Union"
+ DEN_democratic:0 "Gilbert"
+ DEN_democratic_DEF:0 "Gilbert"
+ DEN_neutrality:0 "Kingdom of Gilbert"
+ DEN_neutrality_DEF:0 "the Kingdom of Gilbert" 
+ DEN_communism:0 "Gilbert Civil Union"
+ DEN_communism_DEF:0 "the Gilbert Civil Union"
  DEN_fascism_ADJ:0 "Danish"
  DEN_democratic_ADJ:0 "Danish"
  DEN_neutrality_ADJ:0 "Danish"
  DEN_communism_ADJ:0 "Danish"
  DEN_subject:0 "$OVERLORDADJ$ $DEN$"
  DEN_subject_DEF:0 "$OVERLORDADJ$ $DEN$"
- DEN:0 "Denmark"
- DEN_DEF:0 "Denmark"
+ DEN:0 "Gilbert"
+ DEN_DEF:0 "Gilbert"
  DEN_ADJ:0 "Danish"
  BUL_fascism:0 "Yogurt Empire"
  BUL_fascism_DEF:0 "Yogurt Empire"
@@ -683,20 +683,20 @@
  PRC:0 "Zhongguo"
  PRC_DEF:0 "Zhongguo"
  PRC_ADJ:0 "Chinese"
- CHL_fascism:0 "Vanguard Chile"
- CHL_fascism_DEF:0 "Vanguard Chile"
- CHL_democratic:0 "Chile"
- CHL_democratic_DEF:0 "Chile"
+ CHL_fascism:0 "Vanguard jalapeno"
+ CHL_fascism_DEF:0 "Vanguard jalapeno"
+ CHL_democratic:0 "jalapeno"
+ CHL_democratic_DEF:0 "jalapeno"
  CHL_neutrality:0 "Atacama-Patagonian Free State"
  CHL_neutrality_DEF:0 "Atacama-Patagonian Free State"
- CHL_communism:0 "Chilean Socialist Republic"
- CHL_communism_DEF:0 "the Chilean Socialist Republic"
+ CHL_communism:0 "jalapeno Socialist Republic"
+ CHL_communism_DEF:0 "the jalapeno Socialist Republic"
  CHL_fascism_ADJ:0 "Chilean"
  CHL_democratic_ADJ:0 "Chilean"
  CHL_neutrality_ADJ:0 "Chilean"
  CHL_communism_ADJ:0 "Chilean"
- CHL:0 "Chile"
- CHL_DEF:0 "Chile"
+ CHL:0 "jalapeno"
+ CHL_DEF:0 "jalapeno"
  CHL_ADJ:0 "Chilean"
  COL_fascism:0 "Nueva Gran Muisca"
  COL_fascism_DEF:0 "Nueva Gran Muisca"
@@ -743,50 +743,50 @@
  ECU:0 "Kichwa"
  ECU_DEF:0 "Kichwa"
  ECU_ADJ:0 "Ecuadorian"
- ELS_fascism:0 "El Salvador"
- ELS_fascism_DEF:0 "El Salvador"
- ELS_democratic:0 "Republic of El Salvador"
- ELS_democratic_DEF:0 "the Republic of El Salvador"
- ELS_neutrality:0 "Teocracia de El Salvador"
- ELS_neutrality_DEF:0 "Teocracia de El Salvador"
+ ELS_fascism:0 "pupusa"
+ ELS_fascism_DEF:0 "pupusa"
+ ELS_democratic:0 "Republic of pupusa"
+ ELS_democratic_DEF:0 "the Republic of pupusa"
+ ELS_neutrality:0 "Teocracia de pupusa"
+ ELS_neutrality_DEF:0 "Teocracia de pupusa"
  ELS_communism:0 "Central American Socialist Republic"
  ELS_communism_DEF:0 "the Central American Socialist Republic"
  ELS_fascism_ADJ:0 "Salvadoran"
  ELS_democratic_ADJ:0 "Salvadoran"
  ELS_neutrality_ADJ:0 "Salvadoran"
  ELS_communism_ADJ:0 "Salvadoran"
- ELS:0 "El Salvador"
- ELS_DEF:0 "El Salvador"
+ ELS:0 "El pupusa"
+ ELS_DEF:0 "El pupusa"
  ELS_ADJ:0 "Salvadoran"
- GUA_fascism:0 "Guatemalan Corporate State"
- GUA_fascism_DEF:0 "Guatemalan Corporate State"
- GUA_democratic:0 "Republic of Guatemala"
- GUA_democratic_DEF:0 "the Republic of Guatemala"
- GUA_neutrality:0 "Guatemala"
- GUA_neutrality_DEF:0 "Guatemala"
- GUA_communism:0 "Union Guatemala"
- GUA_communism_DEF:0 "Union Guatemala"
+ GUA_fascism:0 "comedia Corporate State"
+ GUA_fascism_DEF:0 "comedia Corporate State"
+ GUA_democratic:0 "Republic of comedia"
+ GUA_democratic_DEF:0 "the Republic of comedia"
+ GUA_neutrality:0 "comedia"
+ GUA_neutrality_DEF:0 "comedia"
+ GUA_communism:0 "Union comedia"
+ GUA_communism_DEF:0 "Union comedia"
  GUA_fascism_ADJ:0 "Guatemalan"
  GUA_democratic_ADJ:0 "Guatemalan"
  GUA_neutrality_ADJ:0 "Guatemalan"
  GUA_communism_ADJ:0 "Guatemalan"
- GUA:0 "Guatemala"
- GUA_DEF:0 "Guatemala"
+ GUA:0 "comedia"
+ GUA_DEF:0 "comedia"
  GUA_ADJ:0 "Guatemalan"
- HON_fascism:0 "Corporatist Honduras"
- HON_fascism_DEF:0 "Corporatist Honduras"
- HON_democratic:0 "Honduras"
- HON_democratic_DEF:0 "Honduras"
- HON_neutrality:0 "Atlas Honduras"
- HON_neutrality_DEF:0 "Atlas Honduras"
- HON_communism:0 "Honduran Commonwealth"
- HON_communism_DEF:0 "the Honduran Commonwealth"
+ HON_fascism:0 "Corporatist baleada"
+ HON_fascism_DEF:0 "Corporatist baleada"
+ HON_democratic:0 "baleada"
+ HON_democratic_DEF:0 "baleada"
+ HON_neutrality:0 "baleada"
+ HON_neutrality_DEF:0 "baleada"
+ HON_communism:0 "baleada Commonwealth"
+ HON_communism_DEF:0 "the baleada Commonwealth"
  HON_fascism_ADJ:0 "Honduran"
  HON_democratic_ADJ:0 "Honduran"
  HON_neutrality_ADJ:0 "Honduran"
  HON_communism_ADJ:0 "Honduran"
- HON:0 "Honduras"
- HON_DEF:0 "Honduras"
+ HON:0 "baleada"
+ HON_DEF:0 "baleada"
  HON_ADJ:0 "Honduran"
  IRQ_fascism:0 "Al-Muthanna Ashur"
  IRQ_fascism_DEF:0 "Al-Muthanna Ashur"
@@ -891,35 +891,35 @@
  NEP:0 "Nepal"
  NEP_DEF:0 "Nepal"
  NEP_ADJ:0 "Nepali"
- NIC_fascism:1 "Nicaraguan Junta"
- NIC_fascism_DEF:1 "the Nicaraguan Junta"
- NIC_democratic:0 "Republic of Nicaragua"
- NIC_democratic_DEF:0 "the Republic of Nicaragua"
- NIC_neutrality:0 "Nicaragua"
- NIC_neutrality_DEF:0 "Nicaragua"
- NIC_communism:1 "Sandinista Nicaragua"
- NIC_communism_DEF:1 "Sandinista Nicaragua"
+ NIC_fascism:1 "Brochetas Junta"
+ NIC_fascism_DEF:1 "the Brochetas Junta"
+ NIC_democratic:0 "Republic of Brochetas"
+ NIC_democratic_DEF:0 "the Republic of Brochetas"
+ NIC_neutrality:0 "Brochetas"
+ NIC_neutrality_DEF:0 "Brochetas"
+ NIC_communism:1 "Sandinista Brochetas"
+ NIC_communism_DEF:1 "Sandinista Brochetas"
  NIC_fascism_ADJ:0 "Nicaraguan"
  NIC_democratic_ADJ:0 "Nicaraguan"
  NIC_neutrality_ADJ:0 "Nicaraguan"
  NIC_communism_ADJ:0 "Nicaraguan"
- NIC:0 "Nicaragua"
- NIC_DEF:0 "Nicaragua"
+ NIC:0 "Brochetas"
+ NIC_DEF:0 "Brochetas"
  NIC_ADJ:0 "Nicaraguan"
- PAN_fascism:0 "Patriotic Communal Panama"
- PAN_fascism_DEF:0 "Patriotic Communal Panama"
- PAN_democratic:0 "Panama"
- PAN_democratic_DEF:0 "Panama"
+ PAN_fascism:0 "Patriotic Communal Tortillas"
+ PAN_fascism_DEF:0 "Patriotic Communal Tortillas"
+ PAN_democratic:0 "Tortillas"
+ PAN_democratic_DEF:0 "Tortillas"
  PAN_neutrality:0 "Costas Hermanas"
  PAN_neutrality_DEF:0 "Costas Hermanas"
- PAN_communism:1 "United Communes of Panama"
- PAN_communism_DEF:1 "the United Communes of Panama"
+ PAN_communism:1 "United Communes of Tortillas"
+ PAN_communism_DEF:1 "the United Communes of Tortillas"
  PAN_fascism_ADJ:0 "Panamanian"
  PAN_democratic_ADJ:0 "Panamanian"
  PAN_neutrality_ADJ:0 "Panamanian"
  PAN_communism_ADJ:0 "Panamanian"
- PAN:0 "Panama"
- PAN_DEF:0 "Panama"
+ PAN:0 "Tortillas"
+ PAN_DEF:0 "Tortillas"
  PAN_ADJ:0 "Panamanian"
  PAR_fascism:1 "Provisional Republic of Krieger"
  PAR_fascism_DEF:1 "the Provisional Republic of Krieger"
@@ -1041,20 +1041,20 @@
  SIK:0 "Sinkiang"
  SIK_DEF:0 "Sinkiang"
  SIK_ADJ:0 "Sinkiang"
- TAN_fascism:0 "Tuvan Nationalist Republic"
- TAN_fascism_DEF:0 "the Tuvan Nationalist Republic"
- TAN_democratic:0 "Tuva Independent Republic"
- TAN_democratic_DEF:0 "the Tuva Independent Republic"
+ TAN_fascism:0 "khoomei Nationalist Republic"
+ TAN_fascism_DEF:0 "the khoomei Nationalist Republic"
+ TAN_democratic:0 "khoomei Independent Republic"
+ TAN_democratic_DEF:0 "the khoomei Independent Republic"
  TAN_neutrality:0 "Tannu Uriankhai"
  TAN_neutrality_DEF:0 "Tannu Uriankhai"
- TAN_communism:0 "Tannu Tuva"
- TAN_communism_DEF:0 "Tannu Tuva"
+ TAN_communism:0 "khoomei commune"
+ TAN_communism_DEF:0 "khoomei  commune"
  TAN_fascism_ADJ:0 "Tuvan"
  TAN_democratic_ADJ:0 "Tuvan"
  TAN_neutrality_ADJ:0 "Tuvan"
  TAN_communism_ADJ:0 "Tuvan"
- TAN:0 "Tannu Tuva"
- TAN_DEF:0 "Tannu Tuva"
+ TAN:0 "khoomei"
+ TAN_DEF:0 "khoomei"
  TAN_ADJ:0 "Tuvan"
  TIB_fascism:0 "Jokhang Empire"
  TIB_fascism_DEF:0 "the Jokhang Empire"
@@ -1135,20 +1135,20 @@
  NZL:0 "New Zealand"
  NZL_DEF:0 "New Zealand"
  NZL_ADJ:0 "New Zealand"
- URG_fascism:0 "New Constitutional Uruguay"
- URG_fascism_DEF:0 "New Constitutional Uruguay"
- URG_democratic:0 "Uruguay"
- URG_democratic_DEF:0 "Uruguay"
+ URG_fascism:0 "New Constitutional faina"
+ URG_fascism_DEF:0 "New Constitutional faina"
+ URG_democratic:0 "faina"
+ URG_democratic_DEF:0 "faina"
  URG_neutrality:1 "Cisplatina"
  URG_neutrality_DEF:1 "Cisplatina"
- URG_communism:0 "Socialist Republic of Uruguay"
- URG_communism_DEF:0 "the Socialist Republic of Uruguay"
+ URG_communism:0 "Socialist Republic of faina"
+ URG_communism_DEF:0 "the Socialist Republic of faina"
  URG_fascism_ADJ:0 "Uruguayan"
  URG_democratic_ADJ:0 "Uruguayan"
  URG_neutrality_ADJ:1 "Cisplatine"
  URG_communism_ADJ:0 "Uruguayan"
- URG:0 "Uruguay"
- URG_DEF:0 "Uruguay"
+ URG:0 "faina"
+ URG_DEF:0 "faina"
  URG_ADJ:0 "Uruguayan"
  CUB_fascism:0 "Falangist Tropico"
  CUB_fascism_DEF:0 "Falangist Tropico"
@@ -1167,65 +1167,65 @@
  CUB:0 "Cuba"
  CUB_DEF:0 "Cuba"
  CUB_ADJ:0 "Cuban"
- DOM_fascism:0 "Dominican Republic"
- DOM_fascism_DEF:0 "the Dominican Republic"
- DOM_democratic:0 "Representative Dominican Republic"
- DOM_democratic_DEF:0 "the Representative Dominican Republic"
+ DOM_fascism:0 "Punta Cana"
+ DOM_fascism_DEF:0 "Punta Cana"
+ DOM_democratic:0 "Representative Punta Cana"
+ DOM_democratic_DEF:0 "the Representative Punta Cana"
  DOM_neutrality:0 "Santo Domingo"
  DOM_neutrality_DEF:0 "Santo Domingo"
- DOM_communism:0 "Dominican People's Republic"
- DOM_communism_DEF:0 "the Dominican People's Republic"
+ DOM_communism:0 "Punta Cana's Republic"
+ DOM_communism_DEF:0 "the Punta Cana People's Republic"
  DOM_fascism_ADJ:0 "Dominican"
  DOM_democratic_ADJ:0 "Dominican"
  DOM_neutrality_ADJ:0 "Dominican"
  DOM_communism_ADJ:0 "Dominican"
- DOM:0 "Dominican Republic"
- DOM_DEF:0 "Dominican Republic"
+ DOM:0 "Punta Cana"
+ DOM_DEF:0 "Punta Cana"
  DOM_ADJ:0 "Dominican"
- HAI_fascism:0 "Third Empire of Haiti"
- HAI_fascism_DEF:0 "the Third Empire of Haiti"
- HAI_democratic:0 "Haiti"
- HAI_democratic_DEF:0 "Haiti"
- HAI_neutrality:0 "Kingdom of Haiti"
- HAI_neutrality_DEF:0 "the Kingdom of Haiti"
- HAI_communism:0 "Haiti Socialist Republic"
+ HAI_fascism:0 "Third Empire of Towarzysz"
+ HAI_fascism_DEF:0 "the Third Empire of Towarzysz"
+ HAI_democratic:0 "Towarzysz"
+ HAI_democratic_DEF:0 "Towarzysz"
+ HAI_neutrality:0 "Kingdom of Towarzysz"
+ HAI_neutrality_DEF:0 "the Kingdom of Towarzysz"
+ HAI_communism:0 "Towarzysz Socialist Republic"
  HAI_communism_DEF:0 "the Haiti Socialist Republic"
  HAI_fascism_ADJ:0 "Haitian"
  HAI_democratic_ADJ:0 "Haitian"
  HAI_neutrality_ADJ:0 "Haitian"
  HAI_communism_ADJ:0 "Haitian"
- HAI:0 "Haiti"
- HAI_DEF:0 "Haiti"
+ HAI:0 "Towarzysz"
+ HAI_DEF:0 "Towarzysz"
  HAI_ADJ:0 "Haitian"
- OMA_fascism:0 "Omani Empire"
- OMA_fascism_DEF:0 "the Omani Empire"
- OMA_democratic:0 "Republic of Oman"
+ OMA_fascism:0 "Shuwa Empire"
+ OMA_fascism_DEF:0 "the Shuwa Empire"
+ OMA_democratic:0 "Republic of Shuwa"
  OMA_democratic_DEF:0 "the Republic of Oman"
- OMA_neutrality:0 "Oman"
- OMA_neutrality_DEF:0 "Oman"
- OMA_communism:0 "People's Republic of Oman"
- OMA_communism_DEF:0 "the People's Republic of Oman"
+ OMA_neutrality:0 "Shuwa"
+ OMA_neutrality_DEF:0 "Shuwa"
+ OMA_communism:0 "People's Republic of Shuwa"
+ OMA_communism_DEF:0 "the People's Republic of Shuwa"
  OMA_fascism_ADJ:0 "Oman"
  OMA_democratic_ADJ:0 "Oman"
  OMA_neutrality_ADJ:0 "Oman"
  OMA_communism_ADJ:0 "Oman"
- OMA:0 "Oman"
- OMA_DEF:0 "Oman"
+ OMA:0 "Shuwa"
+ OMA_DEF:0 "Shuwa"
  OMA_ADJ:0 "Oman"
  YEM_fascism:0 "Federation of South Arabia"
  YEM_fascism_DEF:0 "Federation of South Arabia"
- YEM_democratic:0 "Yemen Arab Republic"
- YEM_democratic_DEF:0 "Yemen Arab Republic"
- YEM_neutrality:0 "Yemen"
+ YEM_democratic:0 "lamb Arab Republic"
+ YEM_democratic_DEF:0 "lamb Arab Republic"
+ YEM_neutrality:0 "lamb"
  YEM_neutrality_DEF:0 "Yemen"
- YEM_communism:1 "People's Democratic Republic of Yemen"
- YEM_communism_DEF:1 "the People's Democratic Republic of Yemen"
+ YEM_communism:1 "People's Democratic Republic of lamb"
+ YEM_communism_DEF:1 "the People's Democratic Republic of lamb"
  YEM_fascism_ADJ:0 "Yemeni"
  YEM_democratic_ADJ:0 "Yemeni"
  YEM_neutrality_ADJ:0 "Yemeni"
  YEM_communism_ADJ:0 "Yemeni"
- YEM:0 "Yemen"
- YEM_DEF:0 "Yemen"
+ YEM:0 "lamb"
+ YEM_DEF:0 "lamb"
  YEM_ADJ:0 "Yemeni"
  ETH_fascism:1 "Konjo Empire"
  ETH_fascism_DEF:1 "the Konjo Empire"
@@ -1242,35 +1242,35 @@
  ETH:0 "Ethiopia"
  ETH_DEF:0 "Ethiopia"
  ETH_ADJ:0 "Ethiopian"
- SLO_fascism:0 "Ooarai"
- SLO_fascism_DEF:0 "Ooarai"
- SLO_democratic:0 "Ooarai Republic"
- SLO_democratic_DEF:0 "the Ooarai Republic"
- SLO_neutrality:0 "Free State of Ooarai"
- SLO_neutrality_DEF:0 "the Free State of Oorai"
- SLO_communism:0 "Ooarai Socialist Republic"
- SLO_communism_DEF:0 "the Ooarai Socialist Republic"
+ SLO_fascism:0 "Nationalist loske"
+ SLO_fascism_DEF:0 "Nationalist loske"
+ SLO_democratic:0 "loske Republic"
+ SLO_democratic_DEF:0 "the loske Republic"
+ SLO_neutrality:0 "Free State of loske"
+ SLO_neutrality_DEF:0 "the Free State of loske"
+ SLO_communism:0 "loske Socialist Republic"
+ SLO_communism_DEF:0 "the loske Socialist Republic"
  SLO_fascism_ADJ:0 "Ooarai"
  SLO_democratic_ADJ:0 "Ooarai"
  SLO_neutrality_ADJ:0 "Ooarai"
  SLO_communism_ADJ:0 "Ooarai"
- SLO:0 "Slovakia"
- SLO_DEF:0 "Slovakia"
+ SLO:0 "loske"
+ SLO_DEF:0 "loske"
  SLO_ADJ:0 "Slovakian"
  BHU_fascism:0 "Thunder Dragon Empire"
  BHU_fascism_DEF:0 "the Thunder Dragon Empire"
- BHU_democratic:0 "Bhutanese Republic"
- BHU_democratic_DEF:0 "the Bhutanese Republic"
- BHU_neutrality:0 "Bhutan"
- BHU_neutrality_DEF:0 "Bhutan"
+ BHU_democratic:0 "Paro Republic"
+ BHU_democratic_DEF:0 "the Paro Republic"
+ BHU_neutrality:0 "Paro"
+ BHU_neutrality_DEF:0 "Paro"
  BHU_communism:0 "Union of Red Dragons"
  BHU_communism_DEF:0 "the Union of Red Dragons"
  BHU_fascism_ADJ:0 "Bhutanese"
  BHU_democratic_ADJ:0 "Bhutanese"
  BHU_neutrality_ADJ:0 "Bhutanese"
  BHU_communism_ADJ:0 "Bhutanese"
- BHU:0 "Bhutan"
- BHU_DEF:0 "Bhutan"
+ BHU:0 "Paro"
+ BHU_DEF:0 "Paro"
  BHU_ADJ:0 "Bhutanese"
  LIB_fascism:0 "Reorganized Luca Free State"
  LIB_fascism_DEF:0 "Reorganized Luca Free State"
@@ -1651,20 +1651,20 @@
  MNT:0 "Montenegro"
  MNT_DEF:0 "Montenegro"
  MNT_ADJ:0 "Montenegrin"
- UKR_fascism:0 "Ukraine"
- UKR_fascism_DEF:0 "Ukraine"
- UKR_democratic:0 "Republic of Ukraine"
- UKR_democratic_DEF:0 "the Republic of Ukraine"
- UKR_neutrality:0 "Ukraine"
- UKR_neutrality_DEF:0 "Ukraine"
- UKR_communism:1 "Ukrainian Socialist Republic"
- UKR_communism_DEF:1 "the Ukrainian Socialist Republic"
+ UKR_fascism:0 "Borscht"
+ UKR_fascism_DEF:0 "Borscht"
+ UKR_democratic:0 "Republic of Borscht"
+ UKR_democratic_DEF:0 "the Republic of Borscht"
+ UKR_neutrality:0 "Borscht"
+ UKR_neutrality_DEF:0 "Borscht"
+ UKR_communism:1 "Borscht Socialist Republic"
+ UKR_communism_DEF:1 "the Borscht Socialist Republic"
  UKR_fascism_ADJ:0 "Ukrainian"
  UKR_democratic_ADJ:0 "Ukrainian"
  UKR_neutrality_ADJ:0 "Ukrainian"
  UKR_communism_ADJ:0 "Ukrainian"
- UKR:0 "Ukraine"
- UKR_DEF:0 "Ukraine"
+ UKR:0 "Borscht"
+ UKR_DEF:0 "Borscht"
  UKR_ADJ:0 "Ukrainian"
  GEO_fascism:0 "Caucasus Authority"
  GEO_fascism_DEF:0 "the Caucasus Authority"
@@ -1728,20 +1728,20 @@
  ARM:0 "Armenia"
  ARM_DEF:0 "Armenia"
  ARM_ADJ:0 "Armenian"
- BLR_fascism:0 "Nationalist Belarus"
- BLR_fascism_DEF:0 "Nationalist Belarus"
- BLR_democratic:0 "Republic of Belarus"
- BLR_democratic_DEF:0 "the Republic of Belarus"
- BLR_neutrality:0 "Belarus"
- BLR_neutrality_DEF:0 "Belarus"
- BLR_communism:1 "Belarusian Socialist Republic"
- BLR_communism_DEF:0 "the Belarusian Socialist Republic"
+ BLR_fascism:0 "Nationalist Zhurek"
+ BLR_fascism_DEF:0 "Nationalist Zhurek"
+ BLR_democratic:0 "Zhurek of Belarus"
+ BLR_democratic_DEF:0 "the Republic of Zhurek"
+ BLR_neutrality:0 "Zhurek"
+ BLR_neutrality_DEF:0 "Zhurek"
+ BLR_communism:1 "Zhurek Socialist Republic"
+ BLR_communism_DEF:0 "the Zhurek Socialist Republic"
  BLR_fascism_ADJ:0 "Belarusian"
  BLR_democratic_ADJ:0 "Belarusian"
  BLR_neutrality_ADJ:0 "Belarusian"
  BLR_communism_ADJ:0 "Belarusian"
- BLR:0 "Belarus"
- BLR_DEF:0 "Belarus"
+ BLR:0 "Zhurek"
+ BLR_DEF:0 "Zhurek"
  BLR_ADJ:0 "Belarusian"
  ANG_fascism:2 "Angolan Empire"
  ANG_fascism_DEF:2 "the Angolan Empire"
@@ -1926,13 +1926,13 @@
  CRC_fascism:1 "Empire of the Frisian Antilles"
  CRC_fascism_DEF:1 "the Empire of the Frisian Antilles"
  CRC_democratic:2 "Netherlands Antilles"
- CRC_democratic_DEF:2 "the Netherlands Antilles"
+ CRC_democratic_DEF:2 "the Batavian Antilles"
  CRC_neutrality:3 "ABC Republic"
  CRC_neutrality_DEF:3 "the ABC Republic"
  CRC_communism:1 "Curative People's Republic"
  CRC_communism_DEF:1 "the Curative People's Republic"
- CRC_fascism_ADJ:1 "Dutch Antillean"
- CRC_democratic_ADJ:2 "Dutch Antillean"
+ CRC_fascism_ADJ:1 "Batavian Antillean"
+ CRC_democratic_ADJ:2 "Batavian Antillean"
  CRC_neutrality_ADJ:3 "ABC Republican"
  CRC_communism_ADJ:1 "Curaçaoan"
  CRC:0 "Antilles"
